// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadReportButton should render DownloadReportButton correctly when disabled is false 1`] = `
<div
  class="MuiBox-root css-0"
  data-testid="download-report-button-container-f5553dac-adb7-440f-9549-c3567b22dc76"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-fph7a5-MuiButtonBase-root-MuiButton-root"
    data-testid="download-report-button-f5553dac-adb7-440f-9549-c3567b22dc76"
    tabindex="0"
    title="Download CV"
    type="button"
  >
    <span
      class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dy5dri-MuiSvgIcon-root"
        data-testid="download-report-icon-f5553dac-adb7-440f-9549-c3567b22dc76"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9h-4V3H9v6H5l7 7zM5 18v2h14v-2z"
        />
      </svg>
    </span>
    Download CV
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`DownloadReportButton should render DownloadReportButton correctly when disabled is true 1`] = `
<div
  class="MuiBox-root css-0"
  data-testid="download-report-button-container-f5553dac-adb7-440f-9549-c3567b22dc76"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-fph7a5-MuiButtonBase-root-MuiButton-root"
    data-testid="download-report-button-f5553dac-adb7-440f-9549-c3567b22dc76"
    disabled=""
    tabindex="-1"
    title="Download CV"
    type="button"
  >
    <span
      class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dy5dri-MuiSvgIcon-root"
        data-testid="download-report-icon-f5553dac-adb7-440f-9549-c3567b22dc76"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 9h-4V3H9v6H5l7 7zM5 18v2h14v-2z"
        />
      </svg>
    </span>
    Download CV
  </button>
  <div
    data-testid="download-report-help-tip-f5553dac-adb7-440f-9549-c3567b22dc76"
  />
</div>
`;

exports[`DownloadReportButton should render DownloadReportButton correctly when isLoading is true 1`] = `
<div
  class="MuiBox-root css-0"
  data-testid="download-report-button-container-f5553dac-adb7-440f-9549-c3567b22dc76"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-fph7a5-MuiButtonBase-root-MuiButton-root"
    data-testid="download-report-button-f5553dac-adb7-440f-9549-c3567b22dc76"
    disabled=""
    tabindex="-1"
    title="Download CV"
    type="button"
  >
    <span
      class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1qiplev-MuiCircularProgress-root"
        data-testid="download-report-progress-icon-f5553dac-adb7-440f-9549-c3567b22dc76"
        role="progressbar"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </span>
    Downloading
  </button>
</div>
`;
